tests/ui/typech/trait_extraneous_method.stderr
× error[LM4162]: extraneous method in implementation
   ╭─[trait_extraneous_method.lm:5:1]
 4 │
 5 │ use Foo in A {
   │ ^ implemented method foo does not exist in trait definition
 6 │     fn foo() { }
 7 │ }
   ╰──